<resources>
    <string name="app_name">KPC 24/7</string>

    <string name="nav_open">Navigation Open</string>
    <string name="nav_close">Navigation Close</string>
    <string name="word_for_today">Word For Today</string>

    <string name="prayer_desc">Pray for peace on your street and then in your City.</string>

    <string name="welcome_back">Welcome Back,</string>
    <string name="log_in_header">Log In</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="RegisterTitle">Start Using Your God Given Authority!</string>
    <string name="register_your_details">Register Your Details!</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="already_registerd">Already Registerd?</string>
    <string name="login">Login!</string>

    <string name="permissiondialog">We Require Calender Permission to Send DailyVerse Notification. \n \nThank you for Understanding!</string>


    <string-array name="spinner_register_time">
        <item>Every Day</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <!--Alarm Strings-->
    <!-- Main Activity/Fragment -->
    <string name="empty_view_text">Press the Floating Action Button to add an alarm!</string>

    <!-- Edit Alarm Activity/Fragment -->
    <string name="time">Set Your Time</string>
    <string name="label">Label</string>
    <string name="days">Select Days</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="add_alarm">Set Prayer Alarm</string>
    <string name="add_label_hint">Add a label!</string>
    <string name="update_complete">Changes Saved</string>
    <string name="update_failed">Update Failed</string>
    <string name="delete_complete">Prayer Time Deleted</string>
    <string name="delete_failed">Delete Failed</string>
    <string name="delete_dialog_title">Confirm Delete Prayer Time</string>
    <string name="delete_dialog_content">Are you sure you would like to delete your prayer Time?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Edit Alarm Menu -->
    <string name="action_save">Save</string>
    <string name="action_delete">Delete Prayer Time</string>

    <!-- Alarm Landing Page Activity/Fragment -->
    <string name="launch_main_activity">Open App</string>
    <string name="dismiss">Dismiss</string>
    <string name="prayer_time">Prayer Time</string>

    <!-- Days -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="read_more">Read More…</string>

    <string name="channel_name">KPC Prayer Time</string>
    <string name="uploadtitle">Title</string>
    <string name="uploadDescription">Description</string>
    <string name="uploadWeb_link">Web Link</string>
    <string name="uploadImage_link">Image Link (Optional)</string>
    <string name="uploadAction_button">Action Button (Optional) Default Learn More..</string>
    <string name="upload_note">Note*: Once you save the notification, it will be visible to all the users! You cannot undo the action.</string>
    <string name="app_title">Kings Prayer Call 24/7</string>
    <string name="welcome_to_the_app">Welcome to the App!</string>
    <string name="new_user">New User? Register</string>
    <string name="memeber">Member Already! Login</string>
    <string name="todo">TODO</string>
    <string name="study">Study to Use the word of God Correctly.</string>
    <string name="theTruth">What is the TRUTH?</string>
    <string name="read_the_book">Read the Book…</string>
    <string name="have_you_truely">Have you truly…</string>
    <string name="newUser">New user?</string>
    <string name="register_now">Register Now!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="notifications">Notifications!</string>
    <string name="worship_songs">Worship Songs</string>
    <string name="claim_your">Claim your community for Christ!</string>
    <string name="pray_for_peace">Pray for peace on your street and then in your City</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="set_prayer_time">Set Prayer Time</string>
    <string name="settime">Time</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="your_church_name">Your Church Name</string>
    <string name="pastor_name">Pastor Name</string>
    <string name="your_message">Your Message</string>
    <string name="save_and_continue">Save and Continue</string>
    <string name="video_title">Video Title</string>
    <string name="video_description">Video Description</string>
    <string name="video_web_link">Video Web Link</string>
    <string name="video_image_link">Video Image Link</string>
    <string name="video_count">Video Count with increment of +1</string>
    <string name="numbers">Numbers</string>
    <string name="total_video">Total Videos Count</string>
    <string name="note_once">Note*: Once you save the Video, it will be visible to all the users! You cannot undo this action.</string>
    <string name="videos">Videos</string>
    <string name="save">Save</string>
    <string name="cancle_sound">Pray Now!</string>
    <string name="set_prayer_reminder">Set Prayer Reminder</string>
    <string name="your_prayer_timeSet">Your Prayer Time is Set Successfully!</string>
    <string name="done">Done</string>
    <string name="fetching_data">Connecting to Internet!!</string>
    <string name="verse">--Verse--</string>
    <string name="register_prayer_time_home">Register Prayer Time</string>
    <string name="know_the_truth_title">Know the truth</string>
    <string name="worship_songs_title">Worship Songs</string>
    <string name="videos_title">Sermons</string>
    <string name="prayer_points">Prayer Points</string>
    <string name="prayer_request_title">Prayer Request</string>
    <string name="covid_19_stats">Covid-19 Stats</string>
    <string name="prayer_calender_title">Prayer Calendar</string>
    <string name="user_name_profile">Fetching data!</string>
    <string name="be_blessed">Be Blessed!</string>
    <string name="your_prayer_time_profile">Your Prayer Time</string>
    <string name="contact_us_on_whatsapp">Contact Us on WhatsApp</string>
    <string name="offering">Offering</string>
    <string name="visit_our_website">Visit our Website</string>
    <string name="about_us">About Us</string>
    <string name="share_the_app">Share the App</string>
    <string name="give_us_feedback_on_the_app">Give us feedback on the App</string>
    <string name="log_out">Log Out</string>
    <string name="title_notify">Title!</string>
    <string name="description_notify">Description.</string>
    <string name="song_title">Song Title</string>
    <string name="jesus_worship_song">Jesus Worship Song</string>
    <string name="share_the_verse">Share the App</string>


    <string name="title_activity_sermons_tabbed">Sermons</string>
    <string name="tab_text_1">English</string>
    <string name="tab_text_2">Tamil</string>
    <string name="tab_text_3">Hindi</string>
    <string name="title_activity_sermons">SermonsActivity</string>
    <string name="developers">Developers</string>
    <string name="kpc_team">KPC Team</string>
    <string name="religious_organization">Religious organization in Bengaluru, Karnataka</string>
    <string name="copyrighta">©2020, KPC 24/7 All rights Reserved!</string>
    <string name="last_update">Last Update</string>
    <string name="update_year">June 2020</string>
    <string name="app_version">2.3.0</string>
    <string name="version_app">Version</string>
    <string name="any_questions">Any Questions, Please Contact Us.</string>
    <string name="home_bottom_nav">Home</string>
    <string name="bible_bottom_nav">Bible</string>
    <string name="ignite_bottom_nav">Ignite</string>
    <string name="more_bottom_nav">More</string>
    <!--End of Alarm Strings-->

    <!--Greeting Message-->
    <string name="morning">Good Morning, %1$s</string>
    <string name="afternoon">Good Afternoon, %1$s</string>
    <string name="evening">Good Evening, %1$s</string>
    <string name="night">Good Night, %1$s</string>
    <string name="nameplaceholder">\?Name</string>
    <string name="lyrics_upload_instruction">Note : Only Admins are allowed to upload the Lyrics!!! Should not misuse.\n\nenum(pref, save_activity_log).execute();</string>

</resources>
