<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".UploadVideos">

    <EditText
        android:id="@+id/video_create_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/video_title"
        android:inputType="text" />

    <EditText
        android:id="@+id/video_create_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/video_description"
        android:inputType="textImeMultiLine" />

    <EditText
        android:id="@+id/video_create_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/video_web_link"
        android:inputType="text" />

    <EditText
        android:id="@+id/video_create_imageurl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/video_image_link"
        android:inputType="text" />

    <EditText
        android:id="@+id/video_sort_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/video_count"
        android:inputType="text" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:weightSum="4">

        <TextView
            android:id="@+id/videos_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/numbers"
            android:textColor="@color/blue_A700"
            android:textSize="32sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/total_video"
            android:textColor="@color/blue_A700"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/note_once"
        android:textColor="@color/red_A700" />

</LinearLayout>