<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".CreateNotificationActivity">

    <EditText
        android:id="@+id/create_notify_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/uploadtitle"
        android:inputType="text" />

    <EditText
        android:id="@+id/create_notify_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/uploadDescription"
        android:inputType="textImeMultiLine" />

    <EditText
        android:id="@+id/create_notify_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/uploadWeb_link"
        android:inputType="textUri" />

    <EditText
        android:id="@+id/create_image_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/uploadImage_link"
        android:inputType="textUri" />

    <EditText
        android:id="@+id/create_action_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/uploadAction_button"
        android:inputType="text" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/upload_note"
        android:textColor="@color/red_A700" />
</LinearLayout>