<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:alpha="0.3"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo"
        android:scaleType="fitCenter"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:gravity="fill">

        <Button
            android:id="@+id/load_main_activity_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/launch_main_activity"
            tools:text="Load Main Activity"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored" />

        <Button
            android:id="@+id/dismiss_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dismiss"
            tools:text="Dismiss"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored" />

    </LinearLayout>

    <Button
        android:id="@+id/cancelSound"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cancle_sound"
        android:layout_gravity="center"
        android:background="@drawable/ripple_effect"
        android:gravity="center"
        android:onClick="stopSound"
        android:layout_marginBottom="80dp"/>

</LinearLayout>