<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_10"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:contentDescription="@string/todo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_mlarge">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/spacing_mlarge"
                android:src="@drawable/logo"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/RegisterTitle"
                android:textAlignment="center"

                android:textSize="24sp"

                android:textStyle="bold"
                android:typeface="normal" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_middle"
                android:visibility="visible"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_mlarge">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/register_your_details"
                        android:textColor="@color/grey_700"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:autofillHints="@string/name"
                        android:background="@drawable/input_field_background"
                        android:drawableStart="@drawable/ic_person_outline_black_24dp"
                        android:drawablePadding="6dp"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:padding="12dp" />

                    <EditText
                        android:id="@+id/reg_Email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:autofillHints="@string/email_address"
                        android:background="@drawable/input_field_background"
                        android:drawableStart="@drawable/ic_email_black_24dp"
                        android:drawablePadding="6dp"
                        android:hint="@string/email_address"
                        android:inputType="textEmailAddress"
                        android:padding="12dp" />

                    <EditText
                        android:id="@+id/mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:autofillHints="@string/mobile_number"
                        android:background="@drawable/input_field_background"
                        android:drawableStart="@drawable/ic_local_phone_black_24dp"
                        android:drawablePadding="6dp"
                        android:hint="@string/mobile_number"
                        android:inputType="number"
                        android:padding="12dp" />

                    <EditText
                        android:id="@+id/reg_Password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:autofillHints="@string/password"
                        android:background="@drawable/input_field_background"
                        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                        android:drawablePadding="6dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="12dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="22dp"
                        android:layout_marginBottom="@dimen/spacing_medium"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/register_Btn"
                            android:layout_width="180dp"
                            android:layout_height="48dp"
                            android:background="@drawable/button_primary"
                            android:text="@string/register"
                            android:textColor="#fff"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_large"
                        android:layout_marginBottom="@dimen/spacing_medium"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/already_registerd"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/blue_grey_300"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/reg_sign_in"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/login"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/textPrimaryDarkColor"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@color/textPrimaryColor"
                android:indeterminateTintMode="src_atop"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
