<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.mystreetprayer.app.alarmclock.view.EmptyRecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/alarm_emptystate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="64dp"
        android:background="@drawable/ic_emptyalarmstate"
        android:contentDescription="@string/todo"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/alarm_visiblestate"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginBottom="128dp"
        android:alpha=".8"
        android:background="@drawable/ic_pray_state"
        android:contentDescription="@string/todo"
        android:visibility="gone"
        app:layout_anchor="@+id/successVisible"
        app:layout_anchorGravity="center" />

    <Button
        android:id="@+id/prayer_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="90dp"
        android:background="@drawable/ripple_effect"
        android:drawableStart="@drawable/ic_alarm_black_24dp"
        android:drawablePadding="16dp"
        android:padding="18dp"
        android:text="@string/set_prayer_reminder"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/successVisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="120dp"
        android:gravity="bottom"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_prayer_timeSet"
            android:textAlignment="center"
            android:textSize="28sp" />

        <Button
            android:id="@+id/prayer_set_done"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@drawable/ripple_effect"
            android:backgroundTint="@color/green_600"
            android:drawablePadding="6dp"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>